--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       <title>Trillo &mdash; Your all-in-one booking app</title>
   </head>
   <body>
-      trillo
+      <div class="container">
+        <header class="header">
+          header part
+        </header>
+        <div class="content">
+          <nav class="side-bar">
+            navigation
+          </nav>
+          <main class="hotel-view">
+            hotel view
+          </main>
+        </div>
+      </div>
   </body>
 </html>
