Building the Hotel Overview (creating an infinite animation and using margin: auto with Flexbox as CSS trick)

--- a/index.html
+++ b/index.html
@@ -82,7 +82,51 @@
             </div>
           </nav>
           <main class="hotel-view">
-            hotel view
+            <div class="gallery">
+              <figure class="gallery__item">
+                <img src="img/hotel-1.jpg" alt="The first photo of hotel" class="gallery__photo">
+              </figure>
+              <figure class="gallery__item">
+                <img src="img/hotel-2.jpg" alt="The second photo of hotel" class="gallery__photo">
+              </figure>
+              <figure class="gallery__item">
+                <img src="img/hotel-3.jpg" alt="The third photo of hotel" class="gallery__photo">
+              </figure>
+            </div>
+            <div class="overview">
+              <h1 class="overview__heading">
+                Hotel Las Palmas
+              </h1>
+              <div class="overview__stars">
+                <svg class="overview__icon overview__icon--star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon overview__icon--star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon overview__icon--star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon overview__icon--star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+                <svg class="overview__icon overview__icon--star">
+                    <use xlink:href="img/sprite.svg#icon-star"></use>
+                </svg>
+              </div>
+              <div class="overview__location">
+                <svg class="overview__icon overview__icon--location-pin">
+                    <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                </svg>
+                <button class="btn-inline">
+                  Albufeira, Portugal
+                </button>
+              </div>
+              <div class="overview__rating">
+                <div class="overview__rating-average">8.6</div>
+                <div class="overview__rating-count">429 votes</div>
+              </div>
+            </div>
           </main>
         </div>
       </div>
