Building the hotel description section (using the CSS Masks)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <svg class="side-nav__icon">
                     <use xlink:href="img/sprite.svg#icon-map"></use>
                   </svg>
-                  <span>Hotel</span>
+                  <span>Tours</span>
                 </a>
               </li>
             </ul>
@@ -125,6 +125,38 @@
               <div class="overview__rating">
                 <div class="overview__rating-average">8.6</div>
                 <div class="overview__rating-count">429 votes</div>
+              </div>
+            </div>
+            <div class="hotel-details">
+              <div class="hotel-description">
+                <div class="paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate.
+                </div>
+                <div class="paragraph">
+                  Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+                </div>
+                <ul class="list">
+                  <li class="list__item">Close to the beach</li>
+                  <li class="list__item">Breakfast included</li>
+                  <li class="list__item">Free airport shuttle</li>
+                  <li class="list__item">Free wifi in all rooms</li>
+                  <li class="list__item">Air conditioning and heating</li>
+                  <li class="list__item">Pets allowed</li>
+                  <li class="list__item">We speak all languages</li>
+                  <li class="list__item">Perfect for families</li>
+                </ul>
+                <div class="recommend">
+                  <p class="recommend__number">Lucy and 3 other friends recommend this hotel.</p>
+                  <div class="recommend__friends">
+                    <img src="img/user-3.jpg" alt="The first friend" class="recommend__photo">
+                    <img src="img/user-4.jpg" alt="The second friend" class="recommend__photo">
+                    <img src="img/user-5.jpg" alt="The third friend" class="recommend__photo">
+                    <img src="img/user-6.jpg" alt="The fourth friend" class="recommend__photo"> 
+                  </div>
+                </div>
+              </div>
+              <div class="hotel-reviews">
+                User reviews
               </div>
             </div>
           </main>
