Building the user reviews section and call-to-action button with nice creative and modern hover effect

--- a/index.html
+++ b/index.html
@@ -155,8 +155,43 @@
                   </div>
                 </div>
               </div>
-              <div class="hotel-reviews">
-                User reviews
+              <butto class="hotel-reviews">
+                <figure class="review">
+                  <blockquote class="review__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
+                  </blockquote>
+                  <figcaption class="review__user">
+                    <img src="img/user-1.jpg" alt="The first user" class="review__photo">
+                    <div class="review__user-box">
+                      <p class="review__user-name">Nick Smith</p>
+                      <p class="review__user-date">Feb 23rd, 2017</p>
+                    </div>
+                    <div class="review__user-rating">7.8</div>
+                  </figcaption>
+                </figure>
+                <figure class="review">
+                  <blockquote class="review__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                  </blockquote>
+                  <figcaption class="review__user">
+                    <img src="img/user-2.jpg" alt="The second user" class="review__photo">
+                    <div class="review__user-box">
+                      <p class="review__user-name">Mary Thomas</p>
+                      <p class="review__user-date">Sep 17th, 2017</p>
+                    </div>
+                    <div class="review__user-rating">9.2</div>
+                  </figcaption>
+                </figure>
+                <button class="btn-inline">Show all <span>&rarr;</span></button>
+              </div>
+              <div class="cta">
+                <h2 class="cta__heading">
+                  Good news! We have free rooms for your selected dates!
+                </h2>
+                <button class="btn">
+                  <span class="btn__visible">Book now</span>
+                  <span class="btn__invisible">Only 4 rooms left</span>
+                </button>
               </div>
             </div>
           </main>
