--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 </div>
               </div>
               <butto class="hotel-reviews">
+                <h3 class="hotel-reviews__heading">Reviews</h3>
                 <figure class="review">
                   <blockquote class="review__text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
